--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="./css/bootstrap.min.css" />
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;800&display=swap&family=Cairo:wght@400;600;700&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="./css/style.css" />
+    <link rel="icon" href="data:image/svg+xml,
+    <svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'>
+      <text y='0.9em' font-size='90'>🎓</text>
+    </svg>">
   </head>
   
 <body>
@@ -42,11 +46,15 @@
     <p>حصص مباشرة + منصة مجانية متاحة 24 ساعة</p>
     <img src="./imgs/math.png" alt="Math Learning">
     <br>
-    <a href="https://wa.me/201221122383" class="btn-custom">📲 اشترك الآن عبر واتساب</a>
   </section>
 
   <!-- Sections -->
   <section class="sections">
+    <div class="card" style="background:#e8fff0;">
+  <h3>🎁 أول حصة مجانية</h3>
+  <p>جرب معنا أول حصة كاملة مجانًا قبل الاشتراك.</p>
+</div>
+
     <div class="card">
       <h3>📘 American Curriculum</h3>
       <p>شرح مبسط ومراجعات شاملة لمقررات الرياضيات الأمريكية بجميع المراحل.</p>
@@ -83,11 +91,26 @@
 
   <!-- Footer -->
   <!-- Call to Action -->
-  <section class="hero" style="background:#f0f4ff; margin-top:40px; padding:60px 20px; border-radius:20px;">
-    <h2>📢 الفرصة بين إيديك!</h2>
-    <p>ابدأ رحلتك مع تعلم الرياضيات أونلاين دلوقتي مع متابعة شخصية + منصة مجانية</p>
-    <a href="https://wa.me/201221122383" class="btn-custom">🚀 اشترك الآن عبر واتساب</a>
-  </section>
+  <!-- Call to Action -->
+<section class="hero" style="background:#f0f4ff; margin-top:40px; padding:40px 20px; border-radius:16px;">
+  <h2>📢 الفرصة بين إيديك!</h2>
+  <p>ابدأ رحلتك مع تعلم Math أونلاين الآن — 🎁 أول حصة مجانية + متابعة شخصية</p>
+
+  <a href="https://wa.me/201221122383" class="btn-custom"target="_blank">🚀 احجز حصتك المجانية الآن عبر واتساب اضغط هنا</a>
+
+  <p style="margin-top:15px; font-weight:bold; color:#007acc;">
+    📞 للتواصل المباشر:
+    <a href="tel:+201221122383" style="text-decoration:none; color:inherit;" target="_blank">
+      <span class="ltr-number">+20 122 112 2383</span>
+    </a>
+    |
+    <a href="https://wa.me/201221122383" style="text-decoration:none; color:green; font-weight:bold;" target="_blank">
+      WhatsApp
+    </a>
+  </p>
+  
+</section>
+
   <footer>
     <p>&copy; 2025 جميع الحقوق محفوظة - <span>Eng. Mohamed Mostafa</span></p>
   </footer>
